# parallel-algorithms

./: CMakeLists.txt  README.md
bfs/: BFS.kt  Graph.kt  ParallelFor.kt  ParallelScan.kt  Test.kt
quicksort/: main.cpp  parallel_quicksort.cpp  parallel_quicksort.h  quicksort.cpp  quicksort.h
